# cmakeOpenGL-Template

./: .gitattributes  CMakeLists.txt
cmakeOpenGL-Template/: CMakeLists.txt  cmakeOpenGL-Template.cpp  cmakeOpenGL-Template.h
lib/glew/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
src/: main.cpp
